# bbit-learning-labs

./: .gitignore  404.html  Dockerfile  Installation.md  README.md  docker-compose.yaml  index.html  postBuild  requirements.txt  search.html
.github/workflows/: black.yml
NewsFeed/: Dockerfile  README.md  docker-compose.yml
NewsFeed/backend/: Dockerfile  README.md  pyproject.toml
NewsFeed/backend/app/: __init__.py  newsfeed.py
NewsFeed/backend/app/utils/: redis.py
NewsFeed/backend/resources/dataset/: README.md
NewsFeed/backend/resources/dataset/news/: blogs_0000102.json  blogs_0000104.json  blogs_0000105.json  blogs_0000601.json  blogs_0000602.json  blogs_0000838.json  blogs_0001079.json  blogs_0001220.json  blogs_0001305.json  news_0047753.json
NewsFeed/docs/: index.md
NewsFeed/frontend/: Dockerfile  next.config.ts  package-lock.json  tailwind.config.ts
PortfolioManager/: README.md
PortfolioManager/0-Securities/: securities_notebook.ipynb  sol_security.py  test_security.py
PortfolioManager/1-Positions/: position_notebook.ipynb  sol_position.py  test_positionManager.py
PortfolioManager/2-Account/: account_notebook.ipynb  sol_account.py  test_account.py
PortfolioManager/3-Portfolio/: portfolio_notebook.ipynb  (+2 more)
Processes and Threads/: introduction.ipynb
RabbitMQ/: docker-compose.yaml
Tech-Lab-On-Campus/: README.md  docker-compose.yaml  validate.py
WebDevelopment/: README.md  docker-compose.yml
api-question-prompt/: index.html
backend/: index.html
blit-tech-lab-hackathon/: README.md
frontend/: index.html
search/: search_index.json
(+228 files in other folders)
